--- a/src/Squirrel.nuspec
+++ b/src/Squirrel.nuspec
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
   <metadata>
-    <version>1.8.0</version>
+    <version>1.8.0.1</version>
     <authors>GitHub</authors>
     <owners>Paul Betts</owners>
     <licenseUrl>https://github.com/squirrel/Squirrel.Windows/blob/master/COPYING</licenseUrl>
@@ -9,16 +9,16 @@
     <iconUrl>https://raw.githubusercontent.com/Squirrel/Squirrel.Windows/master/docs/artwork/Squirrel-Logo-Square.png</iconUrl>
 
     <dependencies>
-      <dependency id="DeltaCompressionDotNet" version="[1.1,2.0)" />
+      <dependency id="DeltaCompressionDotNet" version="2.0.0.0" />
       <dependency id="Splat" version="1.6.2" />
       <dependency id="Mono.Cecil" version="0.9.6.1" />
       <dependency id="SharpCompress" version="0.17.1" />
     </dependencies>
 
-    <id>squirrel.windows</id>
+    <id>ppy.squirrel.windows</id>
     <title>Squirrel for Windows</title>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>An installation and update framework for Windows applications</description>
+    <description>An installation and update framework for Windows applications.</description>
     <copyright>Copyright GitHub© 2017</copyright>
   </metadata>
   <files>
