--- a/src/Squirrel.nuspec
+++ b/src/Squirrel.nuspec
@@ -1,25 +1,25 @@
 ﻿<?xml version="1.0"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
   <metadata>
-    <version>1.9.0.4</version>
+    <version>1.9.0.5</version>
     <authors>GitHub</authors>
     <owners>Paul Betts</owners>
-    <licenseUrl>https://github.com/ppy/Squirrel.Windows/blob/master/COPYING</licenseUrl>
-    <projectUrl>https://github.com/ppy/Squirrel.Windows</projectUrl>
-    <iconUrl>https://raw.githubusercontent.com/ppy/Squirrel.Windows/master/docs/artwork/Squirrel-Logo-Square.png</iconUrl>
+    <licenseUrl>https://github.com/dragonfruitnetwork/Squirrel.Windows/blob/master/COPYING</licenseUrl>
+    <projectUrl>https://github.com/dragonfruitnetwork/Squirrel.Windows</projectUrl>
+    <iconUrl>https://raw.githubusercontent.com/dragonfruitnetwork/Squirrel.Windows/master/docs/artwork/Squirrel-Logo-Square.png</iconUrl>
 
     <dependencies>
       <dependency id="DeltaCompressionDotNet" version="2.0.0.0" />
       <dependency id="Splat" version="1.6.2" />
-      <dependency id="Mono.Cecil" version="0.9.6.1" />
+      <dependency id="Mono.Cecil" version="0.11.2" />
       <dependency id="SharpCompress" version="0.17.1" />
     </dependencies>
 
-    <id>ppy.squirrel.windows</id>
+    <id>DragonFruit.Squirrel.Windows</id>
     <title>Squirrel for Windows</title>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>An installation and update framework for Windows applications.</description>
-    <copyright>Copyright GitHub© 2017</copyright>
+    <copyright>Copyright GitHub © 2017</copyright>
   </metadata>
   <files>
     <file src="Squirrel\bin\Release\Squirrel.*" target="lib\Net45" />
